Added support for multi aa instead of just onemoney

--- a/content/data/account-aggregator/api-integration/account-availability-apis.mdx
+++ b/content/data/account-aggregator/api-integration/account-availability-apis.mdx
@@ -51,7 +51,7 @@ Body:
         },
         {
             "aa": "setu-aa",
-            "vua": "9999999999@onemoney",
+            "vua": "9999999999@setu",
             "status": false
         }
     ],
