--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -32,7 +32,7 @@ Call this API to create a consent request. The details of the request will be pr
     "unit" : "MONTH",
     "value": "4"
   },
-  "vua":  "999999999@onemoney",
+  "vua":  "999999999", // {{mobile}} or {{mobile}}@handle. Ex: 999999999@setu or 999999999@onemoney
   "dataRange": {
       "from": "2020-04-01T00:00:00Z",
       "to": "2023-01-01T00:00:00Z"
@@ -228,7 +228,7 @@ If the consent is approved, the status in the response will be `ACTIVE`. After t
     "status": "PENDING",
     "context": [],
     "detail": {
-        "vua": "9999999999@onemoney",
+        "vua": "9999999999@anumati",
         "consentStart": "2023-04-04T07:10:41.165Z",
         "consentExpiry": "2023-08-02T12:40:41.165Z"
     },
@@ -268,7 +268,7 @@ If the consent is approved, the status in the response will be `ACTIVE`. After t
             "unit": "MONTH"
         },
         "fetchType": "PERIODIC",
-        "vua": "99999999999@onemoney",
+        "vua": "99999999999@anumati",
         "dataLife": {
             "value": 1,
             "unit": "YEAR"
