--- a/content/data/account-aggregator/v1/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/v1/api-integration/consent-flow.mdx
@@ -34,7 +34,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
     "consentStart": "2022-01-06T06:23:51.832Z",
     "consentExpiry": "2022-04-23T05:44:53.822Z",
     "Customer": {
-        "id": "9999999999@onemoney" // {mobile_number@onemoney}
+        "id": "9999999999@setu" // {mobile_number@setu}
     },
     "FIDataRange": {
         "from": "2021-04-01T00:00:00Z",
@@ -107,7 +107,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
     "consentStart": "2022-01-06T06:23:51.832Z",
     "consentExpiry": "2022-04-23T05:44:53.822Z",
     "Customer": {
-        "id": "9999999999@onemoney" // {mobile_number@onemoney}
+        "id": "9999999999@setu" // {mobile_number@setu}
     },
     "FIDataRange": {
         "from": "2021-04-01T00:00:00Z",
@@ -289,7 +289,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
     "consentStart": "2022-01-06T06:23:51.832Z",
     "consentExpiry": "2022-04-23T05:44:53.822Z",
     "Customer": {
-        "id": "9999999999@onemoney" // {mobile_number@onemoney}
+        "id": "9999999999@setu" // {mobile_number@setu}
     },
     "FIDataRange": {
         "from": "2021-04-01T00:00:00Z",
