--- a/content/data/account-aggregator/v1/consent-object.mdx
+++ b/content/data/account-aggregator/v1/consent-object.mdx
@@ -21,7 +21,7 @@ This consent object carries information about all the different types of data th
 | `consentTypes`                                  | An array to specify the type of data being requested for, from your user<br/><li>`PROFILE`—Personal details such as mobile number, date of birth, PAN etc.</li><li>`SUMMARY`—Information like mutual fund summary for total amount invested, current value, number of MFs and more.</li><li>`TRANSACTIONS`—List of records against some financial data—e.g., a bank statement, buy/sell orders in a equities account, etc.</li> | Yes                                                    |
 | `fiTypes`                                       | An array specifying the type of financial information being requested for. Possible enums—`DEPOSIT`, `MUTUAL_FUNDS`, `INSURANCE_POLICIES`, `TERM_DEPOSIT`, `RECURRING_DEPOSIT`, `SIP`, `GOVT_SECURITIES`, `EQUITIES`, `BONDS`, `DEBENTURES`, `ETF`, and more. Click <a href="/data/account-aggregator/fi-data-types" target="_blank">here</a> to learn more about the data types.                                               | Yes                                                    |
 | `DataConsumer.id`                               | This is the identifier for the entity that’s requesting for the data. <br/>On UAT, it is a static value – “setu-fiu-id” <br/> On production, it will be a unique “FIU ID” assigned to your organizaiton.                                                                                                                                                                                                                        | Yes                                                    |
-| `Customer.id`                                   | What your customer would use to login to Setu’s AA. It should be sent in the format of **<customer_mobile_number>@onemoney** <br/> Use this to pass on the customer's phone number and auto-fill their number when they login.                                                                                                                                                                                                  | Yes                                                    |
+| `Customer.id`                                   | What your customer would use to login to Setu’s AA. It should be sent in the format of **<customer_mobile_number>@finvu** <br/> Use this to pass on the customer's phone number and auto-fill their number when they login.                                                                                                                                                                                                  | Yes                                                    |
 | `Purpose`                                       | This is used to indicate the purpose of requesting for data. As per the AA spec, the following codes are supported—<br/><li>`101`—Wealth management service</li><li>`102`—Customer spending patterns, budget or other reportings</li><li>`103`—Aggregated statement</li><li>`104`—Explicit consent to monitor the accounts</li><li>`105`—Explicit one-time consent for accessing data from the accounts</li>                    | Yes(single option)                                     |
 | `FIDataRange`                                   | This is used to specify the `from` and `to` date-time range for querying financial information. It is mandatory only when the `consentTypes` array includes `TRANSACTIONS`.<br/>The `from` and `to` date-time can be both - past dates & future dates. Future dates, typically correspond to `PERIODIC` fetches, while a `from` and `to` date-time in the past corresponds to ONETIME fetches.                                  | Only when `consentTypes` array includes `TRANSACTIONS` |
 | `DataLife`                                      | This is the time period for which you are allowed to process the data. Choose between `MONTH`, `YEAR`, `DAY`, `INF` as the `unit` and define a numeric `value` alongside. <br /> For more details on the difference between ‘DataLife’ & “Data Storage” please [click here](https://sahamati.org.in/aa-community-guidelines-v1/storage-of-data/) (check SD001 from the list of guidelines)                                      | Yes                                                    |
