--- a/content/data/account-aggregator/v1/overview.mdx
+++ b/content/data/account-aggregator/v1/overview.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Account Aggregator
 
-Account aggregators(AAs) are <a href="https://www.rbi.org.in/Scripts/bs_viewcontent.aspx?Id=3142" target="_blank">regulated entities</a> that facilitate consented sharing of financial data by utilising the <a href="http://www.niti.gov.in/node/1299" target="_blank">DEPA</a> framework. They act as the bridge between data providers such as banks, and data consumers such as lenders—to enable the sharing of a user’s financial data based on their explicit consent. Setu currently provides AA-related services in close partnership with a <a href="https://www.onemoney.in/" target="_blank">fully-licensed AA.</a>
+Account aggregators(AAs) are <a href="https://www.rbi.org.in/Scripts/bs_viewcontent.aspx?Id=3142" target="_blank">regulated entities</a> that facilitate consented sharing of financial data by utilising the <a href="http://www.niti.gov.in/node/1299" target="_blank">DEPA</a> framework. They act as the bridge between data providers such as banks, and data consumers such as lenders—to enable the sharing of a user’s financial data based on their explicit consent. Setu currently provides AA-related services in close partnership with <a href="https://sahamati.org.in/account-aggregators-in-india/" target="_blank">fully-licensed AA(s).</a>
 
 <Callout type="highlight">
     Data providers are called Financial Information Providers (FIPs) and data
@@ -38,7 +38,7 @@ Try out our sample app built using Setu AA sandbox <a href="https://github.com/S
 
 #### What can you build?
 
-Setu’s AA related services are powered by a <a href="https://www.onemoney.in/" target="_blank">licensed NBFC-AA partner.</a> The AA framework opens up a lot of opportunities for FIU apps to build financial user journeys with seamless user consented data sharing. This allows developers to build tech-first user applications and features powered by digital data sharing flows over conventional PDF documents upload. Some of the use cases worth exploring:
+Setu’s AA related services are powered by <a href="https://sahamati.org.in/account-aggregators-in-india/" target="_blank">licensed NBFC-AA partners.</a> The AA framework opens up a lot of opportunities for FIU apps to build financial user journeys with seamless user consented data sharing. This allows developers to build tech-first user applications and features powered by digital data sharing flows over conventional PDF documents upload. Some of the use cases worth exploring:
 
 1. **Income Verification** - Get access to users’ bank statements with their consents. While Setu AA ensures that the data payload remains standardised and error free, simplify your user verification process and improve conversion rates!
 2. **Loan Monitoring** - Monitor your borrower’s financial health after loan disbursal by analysing cash flow across a user’s bank accounts. As a lender, get early signals from a user's bank statements and prevent potential loan defaults.
