--- a/content/data/account-aggregator/overview.mdx
+++ b/content/data/account-aggregator/overview.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 Account aggregators(AAs) are <a href="https://www.rbi.org.in/Scripts/bs_viewcontent.aspx?Id=3142" target="_blank">regulated entities</a> hat facilitate consented sharing of financial data by utilising the <a href="https://www.niti.gov.in/node/1299" target="_blank">DEPA</a> framework. They act as the bridge between data providers such as banks, and data consumers such as lenders—to enable the sharing of a user’s financial data based on their explicit consent. Setu currently provides AA-related services in close partnership with <a href="https://sahamati.org.in/account-aggregators-in-india/" target="_blank">fully-licensed AAs.</a>
 
-*Note*—Setu’s AA gateway has introduced a powerful enhancement in the form of a *multi-AA gateway*. This lets you connect to multiple AAs, from which Setu’s smart routing framework dynamically selects the most performant one. This helps with higher conversions and better performance of your AA integration. Learn more about  <a href="/data/account-aggregator/multi-aa-gateway" target="_blank">how to utilise multi-AA gateway</a>.
+*Note*—Setu’s AA gateway has introduced a powerful enhancement in the form of a *multi-AA gateway*. This lets you connect to multiple AAs, from which Setu’s smart routing framework dynamically selects the most performant one. This helps with higher conversions and better performance of your AA integration. Learn more about  <a href="/data/account-aggregator/multi-aa-gateway">how to utilise multi-AA gateway</a>.
 <br/>
 
 <Callout type="highlight">
