--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -186,7 +186,7 @@ The following steps are handled by Setu’s screens—
 
 <Callout type="tip">
   Use Setu FIP or Setu FIP-2 to get access to mock financial data on staging. We have created these accounts to mock the FIP data schema based on the FIType chosen.
-  Also, please note that Setu FIP has a dynamic OTP sent to the phone number with which you have created a consent, but Setu FIP-2 has a static OTP '123456'{" "}
+  <br />Also, please note that Setu FIP has a dynamic OTP sent to the phone number with which you have created a consent, but Setu FIP-2 has a static OTP '123456'{" "}
 </Callout>
 
 <hr class="primary" />
