Fix deviations from British English spelling, and refine content slightly

--- a/content/data/account-aggregator/multi-aa-gateway.mdx
+++ b/content/data/account-aggregator/multi-aa-gateway.mdx
@@ -59,24 +59,24 @@ If the FIU wishes to select a specific AA, they simply need to add a handle suff
 
 ### Benefits of multi-AA
 
-The Multi-AA Gateway offers several benefits to FIUs and Account Aggregators.
+The multi-AA gateway offers several benefits to FIUs and Account Aggregators.
 
 ###### 1. Improved consent conversion
-By routing consent requests to the most performant AA, the Multi-AA Gateway increases the likelihood of successful consent completion, reducing failure rates and improving overall conversion rates.
+By routing consent requests to the most performant AA, the multi-AA gateway increases the likelihood of successful consent completion, reduced failure rates and improved overall conversion rates.
 
 ###### 2. Redundancy and resilience
-Having multiple AAs integrated into the routing engine ensures that there is always a backup in case one AA faces performance issues or is temporarily unavailable.
+Having multiple AAs integrated into the routing engine ensures that there is always a backup, in case one AA faces performance issues or is temporarily unavailable.
 
 ###### 3. Higher performance
 AAs are continuously monitored for success rates and latency. The system selects the AA with the best performance metrics, ensuring a higher quality of service for end users.
 
-###### 4. Customisation and flexibility
-In future phases, FIUs will be able to prioritize certain AAs based on business needs, allowing more granular control over the consent routing process.
+###### 4. Simple integration
+Setu APIs are standardised across all AAs, ensuring seamless integration and making it easier for FIUs to manage consent workflows without worrying about AA-specific API integrations.
 
-###### 5. Simple integration
-APIs are standardized across all AAs, ensuring seamless integration with Setu’s TSP (Third-Party Service Providers), making it easier for FIUs to manage consent workflows without worrying about AA-specific API integrations.
+All data from AAs are also always shared in the standardised format specified by ReBIT.  
 
-All data from AAs are always shared in the standardised format specified by ReBIT.  
+###### 5. Customisation and flexibility
+In the future, FIUs will be able to prioritise certain AAs based on business needs, allowing more granular control over the consent routing process.
 
 <NextPage
   info={{
