Text enhance on Digi quickstart

--- a/content/data/digilocker/quickstart.mdx
+++ b/content/data/digilocker/quickstart.mdx
@@ -77,19 +77,19 @@ It also includes a scope parameter, which provides the information about the doc
       <td><code>&lt;redirectUrl&gt;?success=&#123;False&#125;&amp;id=&#123;Digilocker_request.id&#125;&amp;errCode=&#123;code&#125;&errMessage=&#123;message&#125;</code></td>    
     </tr>
     <tr>
-      <td>User Consent to Aadhaar only </td>
+      <td>User Consent to Aadhaar </td>
       <td> 
         <code>&lt;redirectUrl&gt;?success=&#123;True&#125;&amp;id=Digilocker_request.id&amp;scope=ADHAR </code>
       </td>
     </tr>
     <tr>
-      <td>User consent to all three docs </td>
+      <td>User consent to all three documents </td>
       <td>
         <code>&lt;redirectUrl&gt;?success=&#123;True&#125;&amp;id=Digilocker_request.id&amp;scope=ADHAR%2BPANCR%2BDRVLC </code>
       </td>
     </tr>
     <tr>
-      <td>User journey completed without selecting any doc </td>
+      <td>User journey completed without selecting any document </td>
       <td> 
         <code>&lt;redirectUrl&gt;?success=&#123;True&#125;&amp;id=Digilocker_request.id&amp;scope= </code>
       </td>
