added non-expired and removed a Fail block

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -762,7 +762,7 @@ This API retrieves the last data fetch status for a given consent ID. It provide
 
 ### Get Data Sessions by Consent ID
 
-This API retrieves the list of data sessions associated with a given consent ID. It provides details such as the session ID, current status, and the creation timestamp. Sessions are sorted in descending order of creation time.
+This API retrieves the list of all non-expired data sessions associated with a given consent ID. It provides details such as the session ID, current status, and the creation timestamp. Sessions are sorted in descending order of creation time.
 
 ###### Request
 
@@ -836,22 +836,6 @@ This API retrieves the list of data sessions associated with a given consent ID.
         },
         {
           key: "2",
-          label: <Badge type="failure">FAIL - Wrong Product Instance ID</Badge>,
-          content: (
-            <>
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{
-  "traceId": "09b6e082-448e-4c4d-9b48-0b1faaf5e9b5",
-  "errorCode": "NotFound",
-  "errorMsg": "Config not found for provided product instance. Please check the product instance id"
-}`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-        {
-          key: "3",
           label: <Badge type="failure">FAIL - No Sessions Found</Badge>,
           content: (
             <>
