Add new error codes in digilocker

--- a/content/data/digilocker/error-codes.mdx
+++ b/content/data/digilocker/error-codes.mdx
@@ -61,7 +61,10 @@ Below is a table which contains the error codes and corresponding error messages
             <td>
                 <code>bad_request</code>
             </td>
-            <td> Malformed request. Verify if the docType and search parameters are correct. </td>
+            <td> Malformed request. Verify if the docType and search parameters are correct. <br/>
+                The orgid parameter is missing or invalid <br/>
+                URI parameter missing
+            </td>
         </tr>
         <tr>
             <td>
@@ -89,13 +92,49 @@ Below is a table which contains the error codes and corresponding error messages
             <td>
                 <code>upstream_server_error</code>
             </td>
-            <td> Document Repository Service Error <br/> Partner Service Error <br/> Aadhaar Information not available <br/> Upstream service failure </td>
+            <td> Upstream service failure <br/> Document Repository Service Error <br/> Partner Service Error <br/> Invalid response from issuer [#ISR400] </td>
         </tr>
         <tr>
             <td>
                 <code>internal_server_error</code>
             </td>
             <td> Internal server error </td>
+        </tr>
+        <tr>
+            <td>
+                <code>customer_detail_mismatch</code>
+            </td>
+            <td> Mismatch in customer data (e.g. dob/name) across documents (e.g. aadhaar, pan) </td>
+        </tr>
+        <tr>
+            <td>
+                <code>invalid_uri</code>
+            </td>
+            <td> No file found for given URI </td>
+        </tr>
+        <tr>
+            <td>
+                <code>aadhaar_not_available</code>
+            </td>
+            <td> Aadhaar data is not available for this user. Please perform Aadhaar eKYC again. </td>
+        </tr>
+        <tr>
+            <td>
+                <code>consent_not_given</code>
+            </td>
+            <td> Only accepted value for consent is 'Y' </td>
+        </tr>
+        <tr>
+            <td>
+                <code>vault_secret_error</code>
+            </td>
+            <td> Missing request headers for secrets </td>
+        </tr>
+        <tr>
+            <td>
+                <code>invalid_match_key</code>
+            </td>
+            <td> Please enter a valid uuid for the match key </td>
         </tr>
     </tbody>
 </table>
