small change eKYC to KYC

--- a/content/data/digilocker/error-codes.mdx
+++ b/content/data/digilocker/error-codes.mdx
@@ -116,7 +116,7 @@ Below is a table which contains the error codes and corresponding error messages
             <td>
                 <code>aadhaar_not_available</code>
             </td>
-            <td> Aadhaar data is not available for this user. Please perform Aadhaar eKYC again. </td>
+            <td> Aadhaar data is not available for this user. Please perform Aadhaar KYC again. </td>
         </tr>
         <tr>
             <td>
