--- a/content/data/account-aggregator/overview.mdx
+++ b/content/data/account-aggregator/overview.mdx
@@ -7,10 +7,11 @@ visible_in_sidebar: true
 
 ## Account Aggregator
 
-Account aggregators(AAs) are <a href="https://www.rbi.org.in/Scripts/bs_viewcontent.aspx?Id=3142" target="_blank">regulated entities</a> hat facilitate consented sharing of financial data by utilising the <a href="https://www.niti.gov.in/node/1299" target="_blank">DEPA</a> framework. They act as the bridge between data providers such as banks, and data consumers such as lenders—to enable the sharing of a user’s financial data based on their explicit consent. Setu currently provides AA-related services in close partnership with <a href="https://sahamati.org.in/account-aggregators-in-india/" target="_blank">fully-licensed AAs.</a>
+Account aggregators(AAs) are <a href="https://www.rbi.org.in/Scripts/bs_viewcontent.aspx?Id=3142" target="_blank">regulated entities</a> that facilitate consented sharing of financial data by utilising the <a href="https://www.niti.gov.in/node/1299" target="_blank">DEPA</a> framework. They act as the bridge between data providers such as banks, and data consumers such as lenders—to enable the sharing of a user’s financial data based on their explicit consent. Setu currently provides AA-related services in close partnership with <a href="https://sahamati.org.in/account-aggregators-in-india/" target="_blank">fully-licensed AAs.</a>
 
-*Note*—Setu’s AA gateway has introduced a powerful enhancement in the form of a *multi-AA gateway*. This lets you connect to multiple AAs, from which Setu’s smart routing framework dynamically selects the most performant one. This helps with higher conversions and better performance of your AA integration. Learn more about  <a href="/data/account-aggregator/multi-aa-gateway">how to utilise multi-AA gateway</a>.
-<br/>
+_Note_—Setu’s AA gateway has introduced a powerful enhancement in the form of a _multi-AA gateway_. This lets you connect to multiple AAs, from which Setu’s smart routing framework dynamically selects the most performant one. This helps with higher conversions and better performance of your AA integration. Learn more about <a href="/data/account-aggregator/multi-aa-gateway">how to utilise multi-AA gateway</a>.
+
+<br />
 
 <Callout type="highlight">
   Data providers are called Financial Information Providers (FIPs) and data
@@ -22,8 +23,8 @@ Account aggregators(AAs) are <a href="https://www.rbi.org.in/Scripts/bs_viewcont
 For example, let’s say a lender wants to check the bank statements of a user to check their loan eligibility. Here’s how the AA handles it—
 
 <MainImage
-    src="https://storage.googleapis.com/strapi-assets/latest/AA_webpage_infographic_e88a02182f/AA_webpage_infographic_e88a02182f.png"
-    alt="How AA works infographic"
+  src="https://storage.googleapis.com/strapi-assets/latest/AA_webpage_infographic_e88a02182f/AA_webpage_infographic_e88a02182f.png"
+  alt="How AA works infographic"
 />
 
 1. The lender makes a data consent request, which is routed to the AA.
@@ -50,10 +51,10 @@ This allows developers to build tech-first user applications and features powere
 3. **Personal Finance Management** - Help your users make better financial decisions. Pull transactions, categorise and track spending patterns across multiple bank accounts and much more.
 
 <Callout type="tip">
-    For more details, you can check out our{" "}
-    <a href="https://setu.co/AA_playbook.pdf" target="_blank">
-        AA use-case playbook
-    </a>
+  For more details, you can check out our{" "}
+  <a href="https://setu.co/AA_playbook.pdf" target="_blank">
+    AA use-case playbook
+  </a>
 </Callout>
 
 <br />
@@ -66,17 +67,18 @@ Get started with Setu's mock FIP that lets you receive financial data across mul
 
 Setu currently provides building blocks for FIU applications in conjunction with our licensed AA partner. This includes:
 
--   **HTTP APIs**
-    -   Developers can call these APIs to create consent requests, test the approval or rejection of consent requests and fetch data for approved consent.
--   **End-user experience**
-    -   Carefully built screens that your users can use to approve or reject incoming consent requests
-    -   This UI is built to be embeddable inside web and native mobile apps
+- **HTTP APIs**
+  - Developers can call these APIs to create consent requests, test the approval or rejection of consent requests and fetch data for approved consent.
+- **End-user experience**
+  - Carefully built screens that your users can use to approve or reject incoming consent requests
+  - This UI is built to be embeddable inside web and native mobile apps
 
 Please check <a href="/data/insights" target="_blank">Setu Insights</a> to get actionable insights from a customer's bank statement.
 
 <NextPage
   info={{
-    description: "Read through the quickstart guide to get started with integration.",
+    description:
+      "Read through the quickstart guide to get started with integration.",
     slug: "/data/account-aggregator/quickstart",
     title: "API integration",
   }}
