corrected redirections and made changes in autofetch notif payload for error

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -416,7 +416,7 @@ In the Account Aggregator (AA) ecosystem in India, the multi consent feature all
     <tr>
       <th>Path</th>
       <td>
-        <code>/v2/consents/consents/collection</code>
+        <code>/v2/consents/collection</code>
       </td>
     </tr>
     <tr>
