--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -574,11 +574,81 @@ Auto-Fetch data feature aims to absorb this complexity from the FIUs. With Auto-
     "success": true,
     "data": null,
     "error": {
-        "code": "DataFetchFailure",
-        "message": "Failed to fetch data after multiple retry attempts due to upstream errors"
+        "code": "InvalidConsentUse",
+        "message": "Consent fetch frequency exceeded"
     }
 }`}
                             </CodeBlockWithCopy>
+                            <h5>Error codes</h5>
+                            <p>A mapping of error codes and messages</p>
+                            <table>
+                                <tr>
+                                    <th>
+                                        <strong>Error codes</strong>
+                                    </th>
+                                    <th>
+                                        <strong>Error messages</strong>
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>InvalidConsentUse</code>
+                                    </td>
+                                    <td>
+                                        <ul>
+                                            <li>Consent fetch frequency exceeded</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>InvalidConsentStatus</code>
+                                    </td>
+                                    <td>
+                                        <ul>
+                                            <li>Consent for which data fetch has been requested has expired</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>SessionExpired</code>
+                                    </td>
+                                    <td>
+                                        <ul>
+                                            <li>Session to fetch data for a session ID has expired</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>ConsentRevoked</code>
+                                    </td>
+                                    <td>
+                                        <ul>
+                                            <li>Consent for which data fetch has been requested has been revoked</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>UpstreamServerDown</code>
+                                    </td>
+                                    <td>
+                                        <ul>
+                                            <li>Received 500 from upstream AA</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>DataFetchFailure</code>
+                                    </td>
+                                    <td>
+                                        Failed to fetch data after multiple retry attempts due to upstream errors
+                                    </td>
+                                </tr>
+                            </table>
                         </>
                     ),
                 },
