--- a/content/payments/umap/mandates/reserve/execute.mdx
+++ b/content/payments/umap/mandates/reserve/execute.mdx
@@ -15,6 +15,10 @@ visible_in_sidebar: true
 </a>
 
 <hr class="primary" />
+<Callout type="tip">
+Pre-debit Notifications are not required for executed Reserve Mandates since funds are already blocked
+</Callout>
+<br /><br />
 
 Once the mandate creation is **successful**, the merchant can execute
 the mandate on the `executionDate` mentioned.
