updated the hero image in reserve main page

--- a/content/payments/umap/mandates/reserve.mdx
+++ b/content/payments/umap/mandates/reserve.mdx
@@ -29,7 +29,7 @@ MCC 6211 - Capital Markets & Securities Brokers merchants can block upto ₹5 la
 <br />
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/UPI_IPO_customer_flow_diagramwith_person/UPI_IPO_customer_flow_diagramwith_person.png"
+  src="https://storage.googleapis.com/strapi-assets/latest/UPI-IPO-customer-flow-diagram/UPI%20IPO%20customer%20flow%20diagram.png"
   alt="UPI_Reserve_Flow"
 />
 
