FIx Reserve execute docs

--- a/content/payments/umap/mandates/reserve/execute.mdx
+++ b/content/payments/umap/mandates/reserve/execute.mdx
@@ -16,9 +16,11 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 <Callout type="tip">
-Pre-debit Notifications are not required for executed Reserve Mandates since funds are already blocked
+  Pre-debit notifications are not required for executing Reserve Mandates since
+  funds are already blocked
 </Callout>
-<br /><br />
+<br />
+<br />
 
 Once the mandate creation is **successful**, the merchant can execute
 the mandate on the `executionDate` mentioned.
