--- a/content/data/uli/quickstart.mdx
+++ b/content/data/uli/quickstart.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Quickstart
 page_title: GST Verification quickstart
 order: 1
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Setu ULI
